test/src/e2e_vm_tests/test_programs/should_fail/trait_name_conflicts/src/main.sw
script;

trait A {
    const a: u32;
    const a: u32;
}

trait B {
    fn b();
    fn b();
}

trait C {
    const c: u32;
    fn c();
}

fn main() -> u32 {
  0
}
